gateway/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: cert-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: cube3.caravelabs.tech
    http:
      paths:
        - path: /user(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: usermanagement-service
              port:
                number: 80
  tls:
  - hosts: 
    - cube3.caravelabs.tech
    secretName: cube3-tls
